# pkgmanager

./: README.md
go/: LICENSE  Makefile  go.mod  main.go
rust/: Cargo.toml
rust/src/: config.rs  error.rs  lib.rs  main.rs
rust/src/cli/: args.rs  commands.rs  mod.rs
rust/src/core/: artifacts.rs  builder.rs  mod.rs  pkgbuild.rs
rust/src/utils/: env.rs  fs.rs  mod.rs  process.rs
zig/: build.zig  build.zig.zon
zig/src/: config.zig  errors.zig  main.zig  pkgbuild.zig
zig/src/commands/: artifacts.zig  build.zig  deps.zig  version.zig
zig/src/utils/: debug.zig  file_utils.zig  process_utils.zig
