[package]
name = "arch-package-builder"
version = "0.1.0"
edition = "2024"
description = "A reliable tool for building Arch Linux/PrismLinux packages in GitLab CI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3.22.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true