[package]
name = "pkgmanager-builder"
version = "0.1.0"
edition = "2024"
description = "A reliable tool for building Arch Linux/PrismLinux packages in GitLab CI"
license = "MIT"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.22.0"

[profile.release]
opt-level = "z"
debug = "none"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 16
